# enterprise-rag-application

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app.py  main.py  pyproject.toml
.github/workflows/: tests.yml
data/sample/: company-overview.md  employee-handbook.md  holiday-calendar.md  incident-response-playbook.md  it-support-guide.md  procurement-guidelines.md  security-policy.md  vendor-risk-review.md  wellness-services-overview.md
docs/: architecture.md  aws-access-control-map.md  aws-deployment-steps.md  build-checklist.md  chunking-strategy-cheatsheet.md  client-interview.md  core-python-project-checklist.md  deployment.md  engineering-decisions.md  evaluation.md  future-state-modules.md  project-1-closeout.md  project-blueprint.md  project-file-map.md  python-module-organization-cheatsheet.md  rag-mental-roadmap.md  requirements-discovery.md  s3-sample-data-map.md  tomorrow-plan.md
evals/: eval_runner.py  golden_questions.csv
policies/: rag-content-owners-s3-access.json  rag-engineers-s3-admin.json  rag-internal-readers-s3-read.json  rag-public-readers-s3-read.json
scripts/: ingest_demo.py  run_rag_demo.py
src/enterprise_rag/: __init__.py  build_index.py  chunking.py  config.py  embeddings.py  generation.py  ingestion.py  models.py  pipeline.py  providers.py  retrieval.py  schemas.py  vectorstore.py
tests/: test_api.py  test_embeddings.py  test_generation.py  test_ingestion_chunking.py  test_retrieval.py  test_vectorstore.py
