[project]
name = "enterprise-rag-project"
version = "0.1.0"
description = "Enterprise RAG application with citations and refusal behavior."
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "fastapi",
    "sentence-transformers",
    "streamlit",
    "uvicorn",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
